# robot_sem

./: README.md
install/: local_setup.sh  setup.sh
install/your_robot_description/share/ament_index/resource_index/package_run_dependencies/: your_robot_description
install/your_robot_description/share/your_robot_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/your_robot_description/share/your_robot_description/config/: joint_limits.yaml  nav2_params.yaml
install/your_robot_description/share/your_robot_description/launch/: complete_demo.launch.py  gazebo.launch.py  moveit.launch.py  nav2.launch.py  rviz.launch.py
install/your_robot_description/share/your_robot_description/rviz/: robot_config.rviz
install/your_robot_description/share/your_robot_description/urdf/: base.urdf.xacro  gazebo.urdf.xacro  manipulator.urdf.xacro  robot.urdf.xacro
src/your_robot_description/: CMakeLists.txt  package.xml
src/your_robot_description/config/: bridge_config.yaml  controller_manager.yaml  moveit_controllers.yaml
src/your_robot_description/launch/: gazebo.launch.py  robot_state_publisher.launch.py  slam.launch.py
src/your_robot_description/rviz/: moveit_config.rviz
src/your_robot_description/urdf/: gazebo.urdf.xacro  sensors.urdf.xacro
src/your_robot_description/worlds/: corridor_world.world
